--- a/report/report.tex
+++ b/report/report.tex
@@ -201,13 +201,13 @@ To verify the correctness of our simulation program, we have simulated using the
 \begin{table}[h]
 \caption{Simulation results}\label{table:results}
 \begin{center}
-	\begin{tabular}{| l | l | l | l | l | l |}
+	\begin{tabular}{| l | l | l | l | l |}
 	\hline
-	$\rho$ & T & D &$ \frac{\beta p}{\rho} \pm \sigma $& $C_v \pm \sigma$ &$ U_{pot}$ \\
+	$\rho$ & T &$ \frac{\beta p}{\rho} \pm \sigma $& $C_v \pm \sigma$ &$ U_{pot}$ \\
 	\hline
-	0.7  & 1 & $unknown$ & $0.14 \pm 0.14$ & $2.33 \pm 0.15$ & $-4.77 \pm 0.01$  \\
-	0.8  & 1 & $unknown$ & $1.44 \pm 0.18$ & $2.71 \pm 0.31$ & $-5.39 \pm 0.005$ \\
-	0.88 & 1 & $unknown$ & $2.97 \pm 0.19$ & $3.00 \pm 0.45$ & $-5.84 \pm 0.014$ \\
+	0.7  & 1 & $0.14 \pm 0.14$ & $2.33 \pm 0.15$ & $-4.77 \pm 0.01$  \\
+	0.8  & 1 & $1.44 \pm 0.18$ & $2.71 \pm 0.31$ & $-5.39 \pm 0.005$ \\
+	0.88 & 1 & $2.97 \pm 0.19$ & $3.00 \pm 0.45$ & $-5.84 \pm 0.014$ \\
 	\hline
 	\end{tabular}
 \end{center}
